颠倒了调度和客服的权限 客服:正式订单 调度:临时订单

--- a/aop_sale/i18n/zh_CN.po
+++ b/aop_sale/i18n/zh_CN.po
@@ -207,7 +207,7 @@ msgstr "联系人"
 #. module: aop_sale
 #: model_terms:ir.ui.view,arch_db:aop_sale.view_order_form_inherit_aop_sale
 msgid "Copy a product"
-msgstr ""
+msgstr "复制产品"
 
 #. module: aop_sale
 #: model_terms:ir.actions.act_window,help:aop_sale.product_template_action_product
